@@ -1,3 +1,5 @@
+// script.aculo.us controls.js v1.8.0, Tue Nov 06 15:01:40 +0300 2007
+
 // Copyright (c) 2005-2007 Thomas Fuchs (http://script.aculo.us, http://mir.aculo.us)
 //           (c) 2005-2007 Ivan Krstic (http://blogs.law.harvard.edu/ivan)
 //           (c) 2005-2007 Jon Tirsen (http://www.tirsen.com)
@@ -621,8 +623,10 @@ Ajax.InPlaceEditor = Class.create({
     var form = this._form;
     var value = $F(this._controls.editor);
     this.prepareSubmission();
-    var params = this.options.callback(form, value);
-    params = (params ? params + '&' : '?') + 'editorId=' + this.element.id;
+    var params = this.options.callback(form, value) || '';
+    if (Object.isString(params))
+      params = params.toQueryParams();
+    params.editorId = this.element.id;
     if (this.options.htmlResponse) {
       var options = Object.extend({ evalScripts: true }, this.options.ajaxOptions);
       Object.extend(options, {
